# KNELL-Keen-Nameless-Electrical-Loss-Lookout

./: ._KNELL  ._KNELL.code-workspace  .gitignore  KNELL.code-workspace  README.md  api_token.txt  package.json  project.properties  run_cppcheck.sh
8_bit_trane_UART/: ._TRANE.dwf3work  ._Untitled 1.ods  ._default_reading.dwf3work  ._status.rtf  TRANE.dwf3work  Untitled 1.ods  default_reading.dwf3work  status.rtf
8_bit_trane_UART/comm_fault_manual_tripped/: ._manual_A74_trip.txt  manual_A74_trip.txt
8_bit_trane_UART/normal_ops/: ._hex_normal  ._normal_A77.txt  hex_normal  normal_A77.txt
9_bit_trane_UART/: ._binary_9bit_normal.txt  binary_9bit_normal.txt
KNELL/: .clang-format  README.md
KNELL/docs/: README.md
KNELL/resources/: response_template.json
KNELL/roadmap/: Knell_spark_tank.odt  index.html  package-lock.json  package.json  pdfoutput.js  styles.css
KNELL/roadmap/knell_sub/: submission_knell.odt
KNELL/src/: 705-power-loss-detection.cpp  705-power-loss-detection.ino  DiagnosticsHelperRK.h  HelloWorldTest.cpp  HelloWorldTest.h  KNELL.cpp  KNELL.ino  SystemDefinitions.h
KNELL/tests/: HelloWorldTest.h
KNESL/: README.md  project.properties
KNESL/src/: KNESL.cpp  KNESL.ino
aws_sns_middleware/: pyproject.toml
aws_sns_middleware/aws_sns_middleware/: config.py  main.py
docs/: KNELLv0.1.drawio
src/: 705-power-loss-detection.cpp  705-power-loss-detection.ino
